compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__float_literals_redundant_comparison_7.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4164
expression: "pub fn main() { 1.0 <. 2.0 }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { 1.0 <. 2.0 }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { 1.0 <. 2.0 }
  │                 ^^^^^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
